; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/btrfs/extr_root-tree.c_btrfs_find_root_ref.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/btrfs/extr_root-tree.c_btrfs_find_root_ref.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.btrfs_root = type { i32 }
%struct.btrfs_path = type { i32 }
%struct.btrfs_key = type { i8*, i32, i8* }

@BTRFS_ROOT_REF_KEY = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @btrfs_find_root_ref(%struct.btrfs_root* %0, %struct.btrfs_path* %1, i8* %2, i8* %3) #0 {
  %5 = alloca %struct.btrfs_root*, align 8
  %6 = alloca %struct.btrfs_path*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca %struct.btrfs_key, align 8
  %10 = alloca i32, align 4
  store %struct.btrfs_root* %0, %struct.btrfs_root** %5, align 8
  store %struct.btrfs_path* %1, %struct.btrfs_path** %6, align 8
  store i8* %2, i8** %7, align 8
  store i8* %3, i8** %8, align 8
  %11 = load i8*, i8** %7, align 8
  %12 = getelementptr inbounds %struct.btrfs_key, %struct.btrfs_key* %9, i32 0, i32 2
  store i8* %11, i8** %12, align 8
  %13 = load i32, i32* @BTRFS_ROOT_REF_KEY, align 4
  %14 = getelementptr inbounds %struct.btrfs_key, %struct.btrfs_key* %9, i32 0, i32 1
  store i32 %13, i32* %14, align 8
  %15 = load i8*, i8** %8, align 8
  %16 = getelementptr inbounds %struct.btrfs_key, %struct.btrfs_key* %9, i32 0, i32 0
  store i8* %15, i8** %16, align 8
  %17 = load %struct.btrfs_root*, %struct.btrfs_root** %5, align 8
  %18 = load %struct.btrfs_path*, %struct.btrfs_path** %6, align 8
  %19 = call i32 @btrfs_search_slot(i32* null, %struct.btrfs_root* %17, %struct.btrfs_key* %9, %struct.btrfs_path* %18, i32 0, i32 0)
  store i32 %19, i32* %10, align 4
  %20 = load i32, i32* %10, align 4
  ret i32 %20
}

declare dso_local i32 @btrfs_search_slot(i32*, %struct.btrfs_root*, %struct.btrfs_key*, %struct.btrfs_path*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
